gcc/testsuite/rust/rustc/ui/issues/issue-17718-constants-not-static.rs
fn id<T>(x: T) -> T { x }

const FOO: usize = 3;

fn foo() -> &'static usize { &id(FOO) }
// { dg-error ".E0515." "" { target *-*-* } .-1 }

fn main() {
}

